Stop wrapping rows automatically

--- a/src/index.scss
+++ b/src/index.scss
@@ -63,11 +63,13 @@ body {
 
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 
     gap: 1rem;
 
     .panel {
+      flex-shrink: 0;
+
       display: grid;
       grid-template-rows: repeat(2, 1fr);
 
